# struct-cli

./: Cargo.toml  README.md  uninstall.sh
docs/: index.html  script.js  style.css
src/: display.rs  main.rs  search.rs  summary.rs  utils.rs
