[package]
name = "struct-cli"
version = "0.3.2"
edition = "2021"
authors = ["Coffee Nerd nerdcoffeemail@gmail.com"]
description = "A smarter tree command with intelligent defaults. Filters out common clutter like node_modules and venv, supports custom ignore patterns, and includes advanced features such as file search, directory summaries, size-aware filtering, and git integration."
license = "MIT"
readme = "README.md"
keywords = ["cli", "tree", "filesystem", "rust", "linux"]
categories = ["command-line-utilities"]
repository = "https://github.com/caffienerd/struct-cli"

[[bin]]
name = "struct"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
walkdir = "2.5"
git2 = "0.19"
regex = "1.11"
